用viewpager实验看能否解决存在的bug，结果依然存在bug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:id="@+id/pager_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         android:background="@android:color/white"
         android:clipChildren="false"
         android:gravity="center_horizontal"
@@ -24,7 +24,16 @@
             android:background="@color/white"
             android:clipChildren="false"/>
 
-
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorAccent"
+        android:text="Next"
+        android:textColor="@color/white"
+        android:textSize="18sp"/>
 
 </RelativeLayout>
